--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       contact@sam-d.com
 author:      Sebastian
 description: "thoughts and scribbles"
 baseurl:     "https://sam-d.github.io"
-url:         "http://sam-d.com/blog/"
+url:         "http://sam-d.com/blog"
 
 # Google analytics
 google_analytics:
@@ -37,3 +37,11 @@ permalink:    pretty
 paginate:     3
 sass:
   compressed: true
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
